Adding local volume exclusion

--- a/partial_raports/partial1_RCL.tex
+++ b/partial_raports/partial1_RCL.tex
@@ -128,6 +128,10 @@ In terms of the dependence on the encounter distance $\varepsilon$, the behavior
 
 We see in figure \ref{fig:epsilon} that encounter distances greater than the nanometric scale induces repair probability that tends to the expect pure chance value of $1/3$ (a finer analyses could be also seen in figure \ref{fig:epsilon_finer} which confirms this trend). Again, the variance in the first mean observations are greater since the events are rare. Studying nanometric encounter distances would require a greater number of simulations or rare events sampling techniques (?). 
 
+\subsection{Effect of Excluded Volume}
+
+\section{Repair probability in different domains}
+
 \section{Partial conclusions}
 \begin{itemize}
 	\item Keeping or removing the cross-links in the separated neighbors does not seem to help particularly the repair when DSBs are far enough from each other, or when there are enough random connectors. The "difficult" situations (DSBs separated by a small genomic distance and with few cross-links) should be analyzed more carefully to conclude if removing of keeping the CLs may help the repair.
